tg-elb.tf
resource "aws_lb_target_group" "test" {
  name     = "project-lb-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id
}


resource "aws_lb_target_group_attachment" "test" {
  target_group_arn = aws_lb_target_group.test.arn
  target_id        = aws_instance.db.id
  port             = 80
}

# resource "aws_lb_target_group_attachment" "test1" {
#   target_group_arn = aws_lb_target_group.test.arn
#   target_id        = aws_instance.db2.id
#   port             = 80
# }

resource "aws_lb_target_group_attachment" "test2" {
  target_group_arn = aws_lb_target_group.test.arn
  target_id        = aws_instance.web.id
  port             = 80
}

resource "aws_lb_target_group_attachment" "test3" {
  target_group_arn = aws_lb_target_group.test.arn
  target_id        = aws_instance.web1.id
  port             = 80
}

# resource "aws_lb" "test" {
#   name               = "project-lb-tf"
#   internal           = false
#   load_balancer_type = "application"
#   security_groups    = [aws_security_group.vpc_sg2.id]
#   subnets            = [for subnet in aws_subnet.main : subnet.id] 

#   enable_deletion_protection = true

  # access_logs {
  #   bucket  = aws_s3_bucket.lb_logs.bucket
  #   prefix  = "test-lb"
  #   enabled = true
  # }

#   tags = {
#     Environment = "production"
#   }
# }
